# mnemonic-core

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.devcontainer/: devcontainer.json
explorer-ui/: .env.example  package-lock.json  package.json
explorer-ui/src/: App.tsx  types.ts
explorer-ui/src/components/: AddConceptForm.tsx  GraphCanvas.tsx  InspectorSidebar.tsx
mre_data/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
src/: error.rs  lib.rs
src/api/: routes.rs
src/graph/: engine.rs  indices.rs  mod.rs  storage.rs  transaction.rs  versioning.rs
src/query/: mod.rs  optimizer.rs  parser.rs
src/security/: engine.rs  mod.rs  policies.rs
src/storage/: mod.rs  rocks_backend.rs
src/transaction/: manager.rs  mod.rs  mvcc.rs
src/types/: concept.rs  mod.rs  query.rs  relationship.rs
src/utils/: metrics.rs  mod.rs
tests/: graph_engine_test.rs  storage_integration_test.rs
