[package]
name = "mnemonic-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Core Engine ---
# This is our database engine. The "engine" for our "car".
rocksdb = "0.24.0"

# --- Data Handling ---
# UUIDs are unique IDs for our concepts and relationships.
uuid ={ version = "1.6", features = ["v4","serde"]}
# Serde is for converting our Rust structs into bytes to save them.
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
#Bincode is a super-fast format for storing our serialized data.
bincode = "1.3.3"
#For handling dates and times
chrono ={ version ="0.4", features = ["serde"]}
#Needed for tests to know about your system's CPUs.
num_cpus = "1.16"

# --- Asynchronous Programming ---
# Tokio is the runtime for handling many operations at once.
tokio ={ version = "1.35", features = ["full"]}

# --- Utilities & Error Handling ---
# A library to create clean, professional error types.
thiserror = "2.0.16"
# For advanced logging, which will be useful for debugging.
tracing = "0.1"
tracing-subscriber ={ version = "0.3", features =["env-filter"]}

[dev-dependencies]
#This section is ONLY for code needed for testing.
#A popular framework for writing benchmarks.
criterion = "0.7.0"
#For advanced, property-based testing.
proptest = "1.4"
#A simple and powerful library for creating temporary folders during tests.
tempfile = "3.8"